--- a/examples/1_simple/index.html
+++ b/examples/1_simple/index.html
@@ -6,6 +6,6 @@
   </head>
   <body>
     向 /simple/get 发送普通 GET 请求，返回 hello world
-    <script src="/__build__/simple.js"></script>
+    <script src="/__build__/1_simple.js"></script>
   </body>
 </html>
