--- a/examples/index.html
+++ b/examples/index.html
@@ -8,7 +8,8 @@
   <body style="padding: 0 20px">
     <h1>ts-axios examples</h1>
     <ul>
-      <li><a href="simple">Simple</a></li>
+      <li><a href="1_simple">Simple</a></li>
+      <li><a href="2_base">处理请求 url 参数</a></li>
     </ul>
   </body>
 </html>
