feat: 基本GET与POST请求

--- a/examples/index.html
+++ b/examples/index.html
@@ -9,7 +9,7 @@
     <h1>ts-axios examples</h1>
     <ul>
       <li><a href="1_simple">Simple</a></li>
-      <li><a href="2_base">处理请求 url 参数</a></li>
+      <li><a href="2_base">基本的GET和POST请求</a></li>
     </ul>
   </body>
 </html>
