--- a/examples/index.html
+++ b/examples/index.html
@@ -10,6 +10,7 @@
     <ul>
       <li><a href="1_simple">Simple</a></li>
       <li><a href="2_base">基本的GET和POST请求</a></li>
+      <li><a href="3_error">处理请求错误</a></li>
     </ul>
   </body>
 </html>
