--- a/examples/index.html
+++ b/examples/index.html
@@ -11,6 +11,7 @@
       <li><a href="1_simple">Simple</a></li>
       <li><a href="2_base">基本的GET和POST请求</a></li>
       <li><a href="3_error">处理请求错误</a></li>
+      <li><a href="4_extend/">接口拓展</a></li>
     </ul>
   </body>
 </html>
